# DocMind

./: .env.example  .gitignore  Makefile  README.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml  secrets.toml
docmind/: upload_and_process_files.py
docmind/auth/: authenticator.py
docmind/llm/: create_llm_chain.py
docmind/pages/: chat.py  docs_chat.py
docmind/utils/: common.py  config.py  env.py  helper.py  log.py
docmind/vectorstore/: chromadb.py
libs/: choose_embeddings.py  config.py  constant.py  create_llm_chain.py  prompts.py  select_embedding.py  settings.py  utils.py  vectorstore.py
libs/components/: configure_api_keys.py  configure_llm.py  disable_components.py  display_history.py  extra_sidbar_options.py  header.py  llm_settings.py  setup_embeddings.py  setup_search_engine.py  upload_files.py
libs/components/pages/: chat_with_search.py  rag_chat.py
libs/ui/pages/: chat_with_search.py  rag_chat.py
libs/utilities/: log.py
tests/unit_tests/: test_config.py  test_env.py  test_logging.py
