[tool.poetry]
name = "DocMind"
version = "0.1.0"
description = "Your Personal Document Assistant"
authors = ["M.Abdulrahman Alnaseer <20760062+abdalrohman@users.noreply.github.com>"]
readme = "README.md"
repository = "https://github.com/abdalrohman/DocMind"
license = "MIT"

[tool.poetry.dependencies]
python = ">3.9.7,<3.13"
langchain-community = "^0.2.5"
python-dotenv = "^1.0.1"
chromadb = "^0.5.2"
streamlit = "^1.35.0"
st-pages = "^0.4.5"
streamlit-authenticator = "^0.3.2"
pymupdf = "^1.24.5"
langchain-cohere = "^0.1.8"

[tool.poetry.group.codespell.dependencies]
codespell = { version = "^2.3.0", optional = true }

[tool.poetry.group.lint.dependencies]
ruff = { version = "^0.4.9", optional = true }

[tool.poetry.group.test.dependencies]
pytest = { version = "^8.2.2", optional = true }
pytest-mock = { version = "^3.14.0", optional = true }
pytest-watcher = { version = "^0.4.2", optional = true }
pytest-asyncio = { version = "^0.23.7", optional = true }
freezegun = { version = "^1.5.1", optional = true }
syrupy = { version = "^4.6.1", optional = true }
grandalf = { version = "^0.8", optional = true }
pytest-profiling = { version = "^1.7.0", optional = true }
responses = { version = "^0.25.3", optional = true }

[tool.poetry.group.typing.dependencies]
mypy = { version = "^1.10.0", optional = true }

[tool.ruff.lint]
select = [
    "E", # pycodestyle
    "F", # pyflakes
    "I", # isort
    "W", # Warnings
    "T201", # print
]

[tool.mypy]
disallow_untyped_defs = "True"

[tool.coverage.run]
omit = [
    "tests/*",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
